# hunt-ng

./: .gitignore  AUTHORS  BUGS  COPYING  ChangeLog  INSTALL.hacked  Makefile.am  README  README.hacked  README.ng  TODO  acinclude.m4  autogen.sh  configure  configure.ac
hunt/: Makefile.am  Makefile.bsd  Makefile.linux  Makefile.linux.old  client.h  connect.c  display.c  display.h  hunt  hunt-hacked.6  hunt-hacked.cat6  hunt-ng.6  hunt.6  hunt.c  list.c  list.h  otto.c  playit.c
huntd/: .driver.c.swo  Makefile.am  Makefile.bsd  Makefile.linux  Makefile.linux.old  answer.c  conf.c  conf.h  draw.c  driver.c  execute.c  expl.c  extern.c  hunt.h  huntd  huntd-hacked.6  huntd-hacked.cat6  huntd-ng.6  huntd.6  huntd.init  makemaze.c  message.c  notes.otl  server.h  shots.c  terminal.c  test  test.c
lib/: Makefile  Makefile.am  fgetln.c  lib.h  strlcat.c  strlcpy.c
